Fix gradient cutoff for overflow content on scroll pages

--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -4,5 +4,4 @@
     min-width: 100vw;
     display: grid;
     grid-template-rows: auto 1fr;
-    height: 100vh;
 }
